[gd_scene load_steps=17 format=3 uid="uid://qx6d6vvkcx70"]

[ext_resource type="Script" uid="uid://dw8mq1r7h63dg" path="res://scripts/gallery.gd" id="1_a1s4g"]
[ext_resource type="Theme" uid="uid://7xe3ua6la8hr" path="res://new_theme.tres" id="1_js4hf"]
[ext_resource type="Texture2D" uid="uid://c6h107ugrt2vw" path="res://rsc/img/contact_icon_custom.png" id="2_fa66i"]
[ext_resource type="Texture2D" uid="uid://1hoy67xju1v4" path="res://rsc/gallery_images/100x100_8bit/88-100x100.jpg" id="3_jg606"]
[ext_resource type="AudioStream" uid="uid://cyytgar4i50tw" path="res://audio/SFX/backBtnSound.wav" id="4_gkbx7"]
[ext_resource type="Texture2D" uid="uid://5ehde36dmm44" path="res://rsc/gallery_images/100x100_8bit/364-100x100.jpg" id="4_n1hag"]
[ext_resource type="Texture2D" uid="uid://b0mjklnkrl5w" path="res://rsc/gallery_images/100x100_8bit/411-100x100.jpg" id="5_cwtjv"]
[ext_resource type="Texture2D" uid="uid://cbgwsf816e18x" path="res://rsc/gallery_images/100x100_8bit/471-100x100.jpg" id="6_fjod5"]
[ext_resource type="Texture2D" uid="uid://2a52t02sjofr" path="res://rsc/gallery_images/100x100_8bit/521-100x100.jpg" id="7_wbvl8"]
[ext_resource type="Texture2D" uid="uid://b22kmnoykpaib" path="res://rsc/gallery_images/100x100_8bit/573-100x100.jpg" id="8_vi2dh"]
[ext_resource type="Texture2D" uid="uid://btudkdq20hx3a" path="res://rsc/gallery_images/100x100_8bit/1043-100x100.jpg" id="9_n406g"]
[ext_resource type="Texture2D" uid="uid://btw2u4wc36gce" path="res://rsc/gallery_images/100x100_8bit/912-100x100.jpg" id="10_sp72q"]
[ext_resource type="Texture2D" uid="uid://c0i2ghc1lyl6u" path="res://rsc/gallery_images/100x100_8bit/901-100x100.jpg" id="11_x3y6n"]
[ext_resource type="Texture2D" uid="uid://dxbdxk123i2wd" path="res://rsc/gallery_images/100x100_8bit/649-100x100.jpg" id="12_52tnc"]
[ext_resource type="Texture2D" uid="uid://dan68g8applub" path="res://rsc/gallery_images/100x100_8bit/635-100x100.jpg" id="13_jx0tf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v8tei"]
bg_color = Color(0.894922, 0.894922, 0.894922, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.158472, 0.158472, 0.158472, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0.215902, 0.215902, 0.215902, 0.509804)
shadow_size = 8

[node name="GalleryScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme = ExtResource("1_js4hf")
script = ExtResource("1_a1s4g")
images = Array[Texture2D]([ExtResource("3_jg606"), ExtResource("4_n1hag"), ExtResource("5_cwtjv"), ExtResource("6_fjod5"), ExtResource("7_wbvl8"), ExtResource("8_vi2dh"), ExtResource("9_n406g"), ExtResource("10_sp72q"), ExtResource("11_x3y6n"), ExtResource("12_52tnc"), ExtResource("13_jx0tf")])
info = Array[String](["", "", "", "", "", "", "", "", "", "", ""])

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="GridContainer" type="GridContainer" parent="ScrollContainer"]
layout_mode = 2
columns = 3

[node name="View" type="Panel" parent="."]
custom_minimum_size = Vector2(300, 320)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_v8tei")

[node name="VBoxContainer" type="VBoxContainer" parent="View"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ViewImg" type="TextureRect" parent="View/VBoxContainer"]
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
texture = ExtResource("2_fa66i")
stretch_mode = 5

[node name="Label" type="Label" parent="View/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.295235, 0.292237, 0.321379, 1)
text = "12/24 11:59 am"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_gkbx7")

[connection signal="mouse_entered" from="View" to="." method="_on_view_mouse_entered"]
[connection signal="mouse_exited" from="View" to="." method="_on_view_mouse_exited"]
